Add animations, fix offline form

--- a/tudutul_webapp/static/fontawesome/css/all.css
+++ b/tudutul_webapp/static/fontawesome/css/all.css
@@ -4122,7 +4122,7 @@ readers do not read off random characters that represent icons */
 .fa-tumblr-square:before {
   content: "\f174"; }
 
-.fa-tv:before {
+.fa-th-list:before {
   content: "\f26c"; }
 
 .fa-twitch:before {
