--- a/tudutul_webapp/templates/account/account.html
+++ b/tudutul_webapp/templates/account/account.html
@@ -5,7 +5,7 @@
 <div class="flex justify-content-end mt-2 text-sm md:text-md md:m-0">
     <a class="inline-block p-2 text-indigo-100 hover:text-indigo-100 mx-2">You are logged in as: <mark class="redMain font-bold">{{userLogin}}</mark></a>
     <a href="/account/logout?&login={{userLogin}}" class="font-bold inline-block py-2 px-10 shadow-xl text-background bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2">Logout</a>
-    <a href="noaccount" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 font-bold mx-2 hover:shadow-2xl">Use App</a>
+    <a href="app" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 font-bold mx-2 hover:shadow-2xl">Use App</a>
     <span class="flex h-3 w-3">
         <span class="animate-ping relative inline-flex rounded-full h-3 w-3 bg-purple-500"></span>
     </span>
@@ -53,11 +53,11 @@
             <!-- <p class="mb-2 text-indigo-100 text-sm sm:text-base mx-2">Ustawienia</p>
             <i class="fas fa-cogs text-3xl sm:text-5xl text-white flex-shrink"></i> -->
             <div class="flex flex-col h-full justify-center items-center">
-                <p class="mt-10 p-2 text-indigo-100 text-sm sm:text-base mx-2">Tabele</p>
+                <p class="mt-10 p-2 text-indigo-100 text-sm sm:text-base mx-2">Tables</p>
                 <i class="fas fa-table text-3xl sm:text-5xl text-white"></i>
             </div>
             <div class="flex flex-col h-full justify-center items-center">
-                <p class="mt-10 p-2 text-indigo-100 text-sm sm:text-base mx-2">Kalendarz</p>
+                <p class="mt-10 p-2 text-indigo-100 text-sm sm:text-base mx-2">Calendar</p>
                 <i class=" my-1 far fa-calendar-alt text-3xl sm:text-5xl text-white "></i>
             </div>
         </div>
