--- a/tudutul_webapp/templates/login/login.html
+++ b/tudutul_webapp/templates/login/login.html
@@ -7,9 +7,11 @@
         <!-- -->
         <div class="w-full h-full flex flex-col justify-center items-center">
             <div class="mt-5 mb-10 md:my-0">
-                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl ">Get</p>
-                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl">everything</p>
-                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl"><mark class="redMain">Du</mark><mark class="blueMain">Ne.</mark></p>
+                <div>
+                    <p class="header-two-part-animation text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl ">Get</p>
+                    <p class="header-two-part-animation text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl">everything</p>
+                </div>
+                <p class="header-two-part-animation text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl"><mark class="redMain">Du</mark><mark class="blueMain">Ne.</mark></p>
             </div>
         </div>
         <div class="mt-5 w-full flex justify-center items-center mb-10 md:mb-0">
@@ -41,7 +43,7 @@
                     </script>
                 </form>
 
-                <p class="mt-5 redMain font-bold tracking-wide">Already have an account? <a class="blueMain" href="/account/login">Login here</a></p>
+                <p class="mt-5 text-lg redMain font-bold tracking-wide">First time here? <a class="blueMain" href="/account/login">Create an account</a> or <a class="text-yellow-300" href="/account/login">use our app offline.</a></p>
             </div>
 
         </div>
