--- a/tudutul_webapp/templates/offline-app/offline-notes.html
+++ b/tudutul_webapp/templates/offline-app/offline-notes.html
@@ -17,7 +17,7 @@
 
 <li class="nav-item">
     <a class="nav-link" onClick="getTuDuDisplayModule();">
-        <i class=" my-1 fas fa-tv text-3xl sm:text-5xl text-yellow-300"></i>
+        <i class=" my-1 fas fa-th-list text-3xl sm:text-5xl text-yellow-300"></i>
         <span class="link-text text-yellow-300">Display</span>
     </a>
 </li>
