--- a/tudutul_webapp/templates/register/register.html
+++ b/tudutul_webapp/templates/register/register.html
@@ -5,9 +5,11 @@
 <div class="mx-auto container h-3/4 m-0 p-0 flex flex-col lg:flex-row-reverse">
         <div class="w-full flex flex-col justify-center items-center ">
             <div class="mt-5 mb-10 md:my-0">
-                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl ">Join</p>
-                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl">the</p>
-                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl"><mark class="redMain">Tu</mark><mark class="blueMain">Du</mark>lians.</p>
+                <div class="header-two-part-animation">
+                    <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl ">Join</p>
+                    <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl">the</p>
+                </div>
+                <p class="header-two-part-animation text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl"><mark class="redMain">Tu</mark><mark class="blueMain">Du</mark>lians.</p>
             </div>
         </div>
         <div class="mt-5 w-full flex justify-center items-center mb-10 md:mb-0">
