--- a/tudutul_webapp/src/css/tailwind.css
+++ b/tudutul_webapp/src/css/tailwind.css
@@ -13,6 +13,12 @@
 
     --transition-speed: 300ms;
 }
+/* 
+body {
+    animation-name: fadein;
+    animation-duration: 0.8s;
+    animation-delay: -0.2s;
+} */
 
 .navbar {
     position: fixed;
@@ -150,6 +156,32 @@
     scrollbar-color: #420e42 white;
 }
 
+.header-two-part-animation {
+    animation-name: fadein;
+    animation-timing-function: ease-out;
+    position: relative;
+}
+
+.header-two-part-animation:nth-child(1) {
+    animation-duration: 1.5s;
+    animation-delay: -0.5s;
+}
+
+.header-two-part-animation:nth-child(2) {
+    animation-duration: 1.5s;
+    animation-delay: -0.35s;
+}
+
+@keyframes fadein {
+    from { 
+        opacity: 0;
+        top: -20%;
+    }
+    to { 
+        opacity: 1;
+        top: 0%;
+     }
+}
 
 /* .mainBackground:hover,
 .mainBackground:focus {
