--- a/tudutul_webapp/static/css/tailwind_compiled.css
+++ b/tudutul_webapp/static/css/tailwind_compiled.css
@@ -32204,6 +32204,13 @@ video {
   --transition-speed: 300ms;
 }
 
+/* 
+body {
+    animation-name: fadein;
+    animation-duration: 0.8s;
+    animation-delay: -0.2s;
+} */
+
 .navbar {
   position: fixed;
   height: 100vh;
@@ -32331,6 +32338,52 @@ video {
 .toDoScroller {
   scrollbar-width: thin;
   scrollbar-color: #420e42 white;
+}
+
+.header-two-part-animation {
+  -webkit-animation-name: fadein;
+          animation-name: fadein;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+  position: relative;
+}
+
+.header-two-part-animation:nth-child(1) {
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-delay: -0.5s;
+          animation-delay: -0.5s;
+}
+
+.header-two-part-animation:nth-child(2) {
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-delay: -0.35s;
+          animation-delay: -0.35s;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+    top: -20%;
+  }
+
+  to {
+    opacity: 1;
+    top: 0%;
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+    top: -20%;
+  }
+
+  to {
+    opacity: 1;
+    top: 0%;
+  }
 }
 
 /* .mainBackground:hover,
@@ -32476,6 +32529,10 @@ html, body {
   padding: 0;
   margin: 0;
 }
+
+/* body {
+    font-family: 'Source Sans Pro';
+} */
 
 input:focus, textarea:focus, button:focus {
   outline: none;
