--- a/tudutul_webapp/src/css/tailwind.css
+++ b/tudutul_webapp/src/css/tailwind.css
@@ -20,6 +20,10 @@ body {
     animation-delay: -0.2s;
 } */
 
+input[disabled="true"] {
+    filter: grayscale(50%) opacity(0.5);
+}
+
 .navbar {
     position: fixed;
     height: 100vh;
