Add es6 modules implementation

--- a/tudutul_webapp/templates/app_layout.html
+++ b/tudutul_webapp/templates/app_layout.html
@@ -16,7 +16,8 @@
     />
 
     {% block scripts %}
-    <script src='{% static "js/offline_notes.js" %}' defer></script>
+    <script type="module" src='{% static "js/offline_notes.js" %}' defer></script>
+    <script type="module" src='{% static "js/render_functions.js" %}' defer></script>
     {% endblock %}
 
 </head>
