--- a/tudutul_webapp/static/css/tailwind_compiled.css
+++ b/tudutul_webapp/static/css/tailwind_compiled.css
@@ -32477,6 +32477,10 @@ html, body {
   margin: 0;
 }
 
+/* body {
+    font-family: 'Source Sans Pro';
+} */
+
 input:focus, textarea:focus, button:focus {
   outline: none;
 }
@@ -32935,18 +32939,18 @@ tr.calendar-body .calendar-day .day[disabled] {
   background-color: #4d004d;
 }
 
-.event-container > .event-icon > div.event-bullet-work,
-.event-indicator > .type-bullet > div.type-work {
+.event-container > .event-icon > div.event-bullet-Work,
+.event-indicator > .type-bullet > div.type-Work {
   background-color: #ff7575;
 }
 
-.event-container > .event-icon > div.event-bullet-personal,
-.event-indicator > .type-bullet > div.type-personal {
+.event-container > .event-icon > div.event-bullet-Personal,
+.event-indicator > .type-bullet > div.type-Personal {
   background-color: #ac59d3;
 }
 
-.event-container > .event-icon > div.event-bullet-other,
-.event-indicator > .type-bullet > div.type-other {
+.event-container > .event-icon > div.event-bullet-Family,
+.event-indicator > .type-bullet > div.type-Family {
   background-color: #6a0683;
 }
 
