-Table selection -added Logout navbar button

--- a/tudutul_webapp/templates/online-app/online-notes.html
+++ b/tudutul_webapp/templates/online-app/online-notes.html
@@ -55,7 +55,7 @@
         <div class="header-two-part-animation">
             <div id="day-display" class="mt-5 ml-10 font-bold text-xl text-white specialtext"></div>
             <!-- TODO: FINISH TABLE DISPLAY -->
-            <div id="table-display" class="mt-5 ml-10 font-bold text-xl text-white specialtext">The table is: Personal</div>
+            <div id="table-display" class="mt-5 ml-10 font-bold text-xl text-white specialtext">The table is: {{ activeTable }}</div>
         </div>
     </div>
 {% endblock %}
