--- a/tudutul_webapp/templates/app_layout.html
+++ b/tudutul_webapp/templates/app_layout.html
@@ -78,22 +78,26 @@
             </li>
 
             
+            {% if logged %}
+                    <li class="nav-item">
+                    <a href="/logout" class="nav-link">
+                        <i class=" my-1 fas fa-sign-out-alt text-3xl sm:text-5xl text-yellow-300"></i>
+                        <span class="link-text text-yellow-300">Logout</span>
+                    </a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a href="/login" class="nav-link">
+                        <i class=" my-1 fas fa-sign-in-alt text-3xl sm:text-5xl text-yellow-300"></i>
+                        <span class="link-text text-yellow-300">Login</span>
+                    </a>
+                </li>
+            {% endif %}
 
-            <li class="nav-item">
-                <a href="/login" class="nav-link">
-                    <i class=" my-1 fas fa-sign-in-alt text-3xl sm:text-5xl text-yellow-300"></i>
-                    <span class="link-text text-yellow-300">Login</span>
-                </a>
-            </li>
-
-            {% endblock %}
-
-            
-            
-            
-            
+        {% endblock %}	
         </ul>
     </nav>
+
 
     <div id="main" class="w-full lg:h-1/4 flex items-center justify-center">
     {% block info %}
