--- a/tudutul_webapp/templates/online-app/online-calendar.html
+++ b/tudutul_webapp/templates/online-app/online-calendar.html
@@ -16,7 +16,7 @@
 {% block navbarbuttons %}
 
 <li class="nav-item">
-    <a href="/app" class="nav-link">
+    <a id="notesButton" href="" class="nav-link">
         <i class="far fa-sticky-note text-3xl sm:text-5xl text-white"></i>
         <span class="link-text text-yellow-300">Notes</span>
     </a>
