--- a/tudutul_webapp/templates/online-app/online-notes.html
+++ b/tudutul_webapp/templates/online-app/online-notes.html
@@ -11,7 +11,7 @@
 {% block navbarbuttons %}
 
 <li class="nav-item">
-    <a href="/app/calendar" class="nav-link">
+    <a id="calendarButton" href="" class="nav-link">
         <i class=" my-1 far fa-calendar-alt text-3xl sm:text-5xl text-yellow-300"></i>
         <span class="link-text text-yellow-300">Calendar</span>
     </a>
