--- a/tudutul_webapp/templates/online-app/online-calendar.html
+++ b/tudutul_webapp/templates/online-app/online-calendar.html
@@ -50,12 +50,12 @@
                 <button type="button" 
                     class="max-w-md inline-block py-2 px-4 shadow-xl text-background font-black bg-yellow-400 hover:bg-yellow-300 hover:text-white rounded transition ease-in duration-400" 
                     id="showDateBtn">
-                    Wybierz datę
+                    Select date
                 </button>
                 <button type="button" 
                     class="max-w-md inline-block py-2 px-4 shadow-xl text-background font-black bg-yellow-400 hover:bg-yellow-300 hover:text-white rounded transition ease-in duration-400" 
                     id="cancelBtn">
-                    Anuluj
+                    Cancel
                 </button>
             </div>
     </div>
