--- a/tudutul_webapp/templates/online-app/online-notes.html
+++ b/tudutul_webapp/templates/online-app/online-notes.html
@@ -40,7 +40,7 @@
 
 {% if logged %}
         <li class="nav-item">
-        <a href="/logout" class="nav-link">
+        <a href="#" onclick="return sendLogout();" class="nav-link">
             <i class=" my-1 fas fa-sign-out-alt text-3xl sm:text-5xl text-yellow-300"></i>
             <span class="link-text text-yellow-300">Logout</span>
         </a>
