--- a/tudutul_webapp/templates/app_layout.html
+++ b/tudutul_webapp/templates/app_layout.html
@@ -16,6 +16,7 @@
     />
 
     {% block scripts %}
+    <script src="{% static 'js/account.js' %}" defer></script>
     <script type="module" src='{% static "js/offline_notes.js" %}' defer></script>
     <script type="module" src='{% static "js/render_functions.js" %}' defer></script>
     {% endblock %}
@@ -80,7 +81,7 @@
             
             {% if logged %}
                     <li class="nav-item">
-                    <a href="/logout" class="nav-link">
+                    <a href="#" onclick="return sendLogout();" class="nav-link">
                         <i class=" my-1 fas fa-sign-out-alt text-3xl sm:text-5xl text-yellow-300"></i>
                         <span class="link-text text-yellow-300">Logout</span>
                     </a>
